2 files modified, 3 added, 3 deleted

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-carousel>
-  <div>adawdwa 1</div>
-  <div>adawdwa 2</div>
+  <slider>adawdwa 1</slider>
+  <slider>adawdwa 2</slider>
 </app-carousel>
