--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-carousel>
-  <slider>adawdwa 1</slider>
-  <slider>adawdwa 2</slider>
+  <slide>adawdwa 1</slide>
+  <slide>adawdwa 2</slide>
 </app-carousel>
