--- a/src/app/components/carousel/carousel.component.scss
+++ b/src/app/components/carousel/carousel.component.scss
@@ -1,16 +1,14 @@
-.carousel {
-  position: relative;
-  width: 100%;
-  min-height: 40vh;
-  border: 1px solid black;
+:host {
+  overflow: hidden;
 
-  ::ng-deep .slides {
-    div {
-      box-sizing: border-box;
-      padding: 20px;
-      position: absolute;
-      width: 100%;
-      height: 100%;
-    }
+  .carousel-container {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+  }
+
+  ::ng-deep slide {
+    width: 100%;
+    flex-shrink: 0;
   }
 }
