--- a/src/app/components/slider/slider.component.scss
+++ b/src/app/components/slider/slider.component.scss
@@ -7,6 +7,10 @@
     flex-direction: row;
     border: 1px solid black;
     min-height: 40vw;
+
+    .transition-effect {
+      transition: transform 0.7s ease-in-out;
+    }
   }
 
   ::ng-deep slide {
