--- a/src/app/components/slider/slider.component.scss
+++ b/src/app/components/slider/slider.component.scss
@@ -5,7 +5,7 @@
   border: 1px solid black;
   min-height: 40vw;
 
-  .transition-effect {
+  &.transition-effect {
     transition: transform 0.7s ease-in-out;
   }
 
