--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -1,1 +1,6 @@
-<ng-content></ng-content>
+<div class="slider-content" #sliderContent>
+  <ng-content></ng-content>
+</div>
+<div class="slider-footer">
+  <div class="slider-points"></div>
+</div>
